--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -153,7 +153,7 @@
 .event-details-footer
   padding: 10px 20px
   border-bottom: 1px solid #eee
-  overflow: auto
+  word-wrap: normal
   max-height: 225px
   &:last-child
     border-bottom: none
@@ -161,6 +161,10 @@
   font-size: 0.8em
   font-style: italic
   color: #666
+
+.x-close-link
+  padding-right: 5px
+  opacity: .5
 
 #attendees li
   +name_bubbles
