mark collections api as beta
test plan: generate the api documentation, the collections api should
have a beta warning (but none of the other pages)

Change-Id: I0d7401566cbb3ec9ef76bad79094dad1628ef11c
Reviewed-on: https://gerrit.instructure.com/10720
Reviewed-by: Simon Williams <simon@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/doc/api/fulldoc/html/css/common.css
+++ b/doc/api/fulldoc/html/css/common.css
@@ -38,6 +38,12 @@ h2 {
   font-size: 1.4em;
   margin-top: 30px;
 }
+h3.beta {
+  border: 1px solid black;
+  background-color: #E5E8FF;
+  text-align: center;
+  padding: 6px;
+}
 
 #sidebar {
   background-color: #F2F5F7;
