move current user profile page to profile/edit
also adds a bio field to the user model

Change-Id: I5e4a77a39403a31462dbaeae20a289d5a5f6761c

--- a/app/stylesheets/profile.sass
+++ b/app/stylesheets/profile.sass
@@ -11,6 +11,10 @@
 .profile_table.editing .display_data 
   display: none
 
+#user_bio
+  width: 100%
+  height: 200px
+
 #registered_services .service 
   font-size: 1.2em
   padding: 2px
