colored active activity feed filter item
Change-Id: I3f10b26291ac29e1ece49a5787a341cd1e5c15f2

--- a/app/stylesheets/blue/_components.scss
+++ b/app/stylesheets/blue/_components.scss
@@ -115,6 +115,15 @@
   & > ul + ul {
     border-top: 1px solid $listBorderColor;
   }
+
+  a.active {
+    background-color: $activeBG;
+    border-bottom-color: lighten($borderColor, 15%);
+    border-top-color: lighten($activeBG, 2%);
+    &:hover {
+      background-color: $activeBG;
+    }
+  }
 }
 
 .nav-links {
