--- a/app/stylesheets/blue/_variables.scss
+++ b/app/stylesheets/blue/_variables.scss
@@ -7,6 +7,7 @@ $grayDark:                      darken($gray, 8%) !default;
 $grayLight:                     lighten($gray, 20%) !default;
 $grayLighter:                   lighten($gray, 50%) !default;
 $white:                         #fff !default;
+$activeBG:                      #D6ECFC;
 $blue:                          #4B92E9; // links
 $blueDark:                      #244979;
 $blueGray:                      #94ABB9;
