--- a/app/views/jst/quickStartBar/assignment.handlebars
+++ b/app/views/jst/quickStartBar/assignment.handlebars
@@ -1,7 +1,7 @@
 <form class="newItemForm">
   <div class="triangle-box-content controls">
     <div class="row-fluid">
-      <input placeholder="Assignment title" class="span12 expander" name="assignment[title]" type="text" id="assignmentTitle">
+      <input placeholder="Assignment title" class="span12 expander" name="name" type="text" id="assignmentTitle">
     </div>
 
     <div class="row-fluid expandee">
@@ -15,13 +15,13 @@
 
       <div class="span10 expandee">
         <div class="dateFieldContainer">
-          <input placeholder="Due date" name="assignment[due_at]" type="text" class="dateField" id="assignmentDueDate">
+          <input placeholder="Due date" name="due_at" type="text" class="dateField" id="assignmentDueDate">
         </div>
       </div>
     </div>
 
     <div class="row-fluid expandee">
-      <input placeholder="Type the name of the class to assign this too..." class="span10" type="text">
+      <input name="course_id" placeholder="Type the name of the class to assign this too..." class="span10" type="text">
       <div class="span2">
         <button type="submit" class="button small-button button-wide">Assign</button>
       </div>
