rename id for list of content exports to prevent javascript error
The underscore require file has a workaround for old IE
that references an 'exports' variable. In chrome this
variable would resolve to the node on the page with the
id 'exports' and cause javascript errors.

Test Plan:
 * Load the course's content exports page in chrome
 * There should be no javascript errors in you web inspector
 * Starting an export should make the progress bar appear

refs #8655

Change-Id: I8f2196490bcfe94f0f7b2f1a6f5d5c42d279d602
Reviewed-on: https://gerrit.instructure.com/10850
Reviewed-by: Ryan Shaw <ryan@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/views/content_exports/index.html.erb
+++ b/app/views/content_exports/index.html.erb
@@ -12,7 +12,7 @@
     <div class="ui-state-error error_message"></div>
   </div>
   
-  <div id="exports">
+  <div id="export_files">
     <% @exports.each do |export| %>
       <% unless export.running? %>
         <% if export.workflow_state == 'exported' #&& export.attachment %>
