--- a/app/views/gradebooks/grade_summary.html.erb
+++ b/app/views/gradebooks/grade_summary.html.erb
@@ -137,7 +137,7 @@
       <% end %>
     </td>
     <td class="due">
-      <% if not (assignment.group_weight rescue false) %>
+      <% if !(assignment.group_weight rescue false) %>
         <%= datetime_string(assignment.due_at, :due_date) rescue "" %>
       <% end %>
     </td>
