--- a/app/stylesheets/dashboard.scss
+++ b/app/stylesheets/dashboard.scss
@@ -20,6 +20,7 @@ $boxSizingBaseLineHeight: $baseLineHeight + 8;
 }
 
 .quickStartBar {
+  margin-top: -$gridGutterWidth;
   font-size: 14px;
   font-weight: bold;
   min-height: 118px;
