--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <% js_bundle :profile %>
-<% jammit_css :profile %>
+<% jammit_css :profile_edit %>
 
 <% if service_enabled?(:avatars) %>
   <a href="#" class="profile_pic_link <%= @user.avatar_state %>" title="<%= t('titles.click_to_change_profile_pic', "Click to change profile pic") %>" style="float: left; margin-right: 5px; min-width: 50px; min-height: 50px; display: inline-block;">
