--- a/app/views/jst/quickStartBar/assignment.handlebars
+++ b/app/views/jst/quickStartBar/assignment.handlebars
@@ -21,7 +21,13 @@
     </div>
 
     <div class="row-fluid expandee">
-      <input name="course_id" placeholder="Type the name of the class to assign this too..." class="span10" type="text">
+      <div class="span10">
+        <input
+          name="course_id"
+          class="recipients span10"
+          type="text"
+          data-finder_url="http://localhost:3000/conversations/find_recipients">
+      </div>
       <div class="span2">
         <button type="submit" class="button small-button button-wide">Assign</button>
       </div>
