--- a/app/views/jst/quickStartBar/assignment.handlebars
+++ b/app/views/jst/quickStartBar/assignment.handlebars
@@ -29,7 +29,7 @@
           data-finder_url="http://localhost:3000/conversations/find_recipients">
       </div>
       <div class="span2">
-        <button type="submit" class="button small-button button-wide">Assign</button>
+        <button type="submit" class="button small-button button-wide" data-text-while-loading="{{#t "assigning"}}Saving...{{/t}}">Assign</button>
       </div>
     </div>
   </div>
