--- a/app/views/jst/quickStartBar/message.handlebars
+++ b/app/views/jst/quickStartBar/message.handlebars
@@ -2,13 +2,19 @@
   <div class="triangle-box-content controls">
 
     <div class="row-fluid expander">
-      <textarea placeholder="Message" class="span12" rows="5" name="description"></textarea>
+      <textarea placeholder="Message" class="span12" rows="5" name="body"></textarea>
     </div>
 
     <div class="row-fluid expandee">
-      <input placeholder="Type the name of the recipients..." class="span10" type="text">
+      <div class="span10">
+        <input
+          name="recipients"
+          class="recipients span10"
+          type="text"
+          data-finder_url="http://localhost:3000/conversations/find_recipients">
+      </div>
       <div class="span2">
-        <button type="submit" class="button small-button button-wide">Send</button>
+        <button type="submit" class="button small-button button-wide" data-text-while-loading="{{#t "Sending"}}Sending...{{/t}}">Send</button>
       </div>
     </div>
   </div>
