disable ajax auto-complete until we can fix performance
test plan:
1. go to the account page
2. start typing a user in the search field
3. confirm that it doesn't auto-complete
4. hit "Go"
5. confirm that it returns users matching the search

Change-Id: I2aefc06f624d0a0b4996cfe1ed6ad651ad795226
Reviewed-on: https://gerrit.instructure.com/10950
Reviewed-by: Cody Cutrer <cody@instructure.com>
Tested-by: Cody Cutrer <cody@instructure.com>
Tested-by: Jon Jensen <jon@instructure.com>

--- a/app/views/shared/_accounts_right_side_shared.html.erb
+++ b/app/views/shared/_accounts_right_side_shared.html.erb
@@ -16,7 +16,8 @@
       'jqueryui/autocomplete' /* /\.autocomplete/ */
     ], function($) {
 
-      $(function(){
+      // disabling until we can make this fast
+      /*$(function(){
         $("#new_user").find("#user_name").autocomplete({
           minLength: 4,
           delay: 150, //miliseconds
@@ -25,7 +26,7 @@
             window.location = $("#new_user")[0].action + "/" + ui.item.id;
           }
         });
-      });
+      });*/
     });
     </script>
   <% end %>
