--- a/app/stylesheets/profile/show.sass
+++ b/app/stylesheets/profile/show.sass
@@ -18,3 +18,18 @@ $profilePicWidth: $gridColumnWidth * 2 + $gridGutterWidth
 @media (min-width: 768px) and (max-width: 979px)
   .profile-pic
     width: 104px
+
+.stats
+  text-align: left
+  width: 100%
+
+  tr
+    border-bottom: 1px solid #dfdfdf
+
+  .stats-header
+    border-bottom: 1px solid $borderColor
+
+  td
+    text-align: right
+    color: $linkColor
+    font-weight: bold
