add discussions from quickstart bar
plus some changes to assignments too

Change-Id: Iaf1ed70630c423f587d842d77e7e9f9df4158f39

--- a/app/views/jst/quickStartBar/assignment.handlebars
+++ b/app/views/jst/quickStartBar/assignment.handlebars
@@ -23,7 +23,7 @@
     <div class="row-fluid expandee">
       <div class="span10">
         <input
-          name="course_id"
+          name="course_ids"
           class="recipients span10"
           type="text"
           data-finder_url="http://localhost:3000/conversations/find_recipients">
