--- a/app/views/jst/quickStartBar/discussion.handlebars
+++ b/app/views/jst/quickStartBar/discussion.handlebars
@@ -6,7 +6,7 @@
     </div>
 
     <div class="row-fluid expandee">
-      <textarea placeholder="Discussion description" class="span12" rows="3" name="description"></textarea>
+      <textarea placeholder="Discussion message" class="span12" rows="3" name="message"></textarea>
     </div>
 
     <div class="row-fluid expandee">
@@ -15,20 +15,26 @@
       </div>
 
       <div class="span2">
-        <input placeholder="Points" class="span1" name="points_possible" type="text" disabled>
+        <input placeholder="Points" class="span1" name="assignment[points_possible]" type="text" disabled>
       </div>
 
       <div class="span8 expandee">
         <div class="dateFieldContainer">
-          <input placeholder="Due date" name="due_at" type="text" class="dateField" disabled>
+          <input placeholder="Due date" name="assignment[due_at]" type="text" class="dateField" disabled>
         </div>
       </div>
     </div>
 
     <div class="row-fluid expandee">
-      <input placeholder="Type the name of the class to assign this too..." class="span10" type="text">
+      <div class="span10">
+        <input
+          name="course_ids"
+          class="recipients span10"
+          type="text"
+          data-finder_url="http://localhost:3000/conversations/find_recipients">
+      </div>
       <div class="span2">
-        <button type="submit" class="button small-button button-wide">Assign</button>
+        <button type="submit" class="button small-button button-wide" data-text-while-loading="{{#t "saving"}}Saving...{{/t}}">Create</button>
       </div>
     </div>
 
