can add announcements from quickstart bar
Change-Id: I0a283c4c30e3f1d8c74b3b80ee7674d082d621ad

--- a/app/views/jst/quickStartBar/discussion.handlebars
+++ b/app/views/jst/quickStartBar/discussion.handlebars
@@ -31,7 +31,7 @@
           name="course_ids"
           class="recipients span10"
           type="text"
-          data-finder_url="http://localhost:3000/conversations/find_recipients">
+          data-finder_url="/conversations/find_recipients">
       </div>
       <div class="span2">
         <button type="submit" class="button small-button button-wide" data-text-while-loading="{{#t "saving"}}Saving...{{/t}}">Create</button>
