--- a/app/views/jst/quickStartBar/announcement.handlebars
+++ b/app/views/jst/quickStartBar/announcement.handlebars
@@ -6,14 +6,23 @@
     </div>
 
     <div class="row-fluid expandee">
-      <textarea placeholder="Announcement body" class="span12" rows="3" name="description"></textarea>
+      <textarea placeholder="Announcement message" class="span12" rows="3" name="message"></textarea>
     </div>
 
     <div class="row-fluid expandee">
-      <input placeholder="Type the name of the class to announce this too..." class="span10" type="text">
+      <div class="span10">
+        <input
+          name="course_ids"
+          class="recipients span10"
+          type="text"
+          data-finder_url="/conversations/find_recipients">
+      </div>
       <div class="span2">
-        <button type="submit" class="button small-button button-wide">Post</button>
+        <button type="submit" class="button small-button button-wide" data-text-while-loading="{{#t "saving"}}Saving...{{/t}}">Announce</button>
       </div>
     </div>
+
+
+
   </div>
 </form>
