--- a/app/stylesheets/blue/_base.scss
+++ b/app/stylesheets/blue/_base.scss
@@ -1,7 +1,7 @@
 @import "header";
 
 body {
-  background: url(../../../images/blue/bg.jpg);
+  background: url(/images/blue/bg.jpg);
 }
 
 #instructure_ajax_error_box {
