--- a/app/views/collection_items/new.html.erb
+++ b/app/views/collection_items/new.html.erb
@@ -3,3 +3,20 @@
   jammit_css :collection_item_save
   js_bundle :collection_item_save
 %>
+<div class="toolbar border border-trbl">
+  <h2 class="header"><%= t :pin_to_canvas_network, 'Pin to Canvas Network'  %></h2>
+</div>
+<div class="popup-container">
+  <div class="image-block">
+    <div class="image-block-image">
+      <%= avatar_image @current_user.id %>
+    </div>
+    <div id="kollectionItemSaveViewContainer" class="image-block-content">
+    </div>
+  </div>
+  <h2 id="savedSuccessfullyMessage" style="display:none">
+    <%= t :saved_successfully, "Saved Successfully" %>
+  </h2>
+</div>
+
+
