refactored qsb views
Change-Id: I2f4c9b042896d39e4aa6e23cc98d8949ba5c1b97

--- a/app/stylesheets/dashboard.scss
+++ b/app/stylesheets/dashboard.scss
@@ -196,4 +196,7 @@ $boxSizingBaseLineHeight: $baseLineHeight + 8;
   background-position: -230px -35px;
 }
 
+.quickStartBar .contextSearch {
+  width: 100%;
+}
 
