--- a/app/views/jst/quickStartBar/discussion.handlebars
+++ b/app/views/jst/quickStartBar/discussion.handlebars
@@ -29,7 +29,7 @@
       <div class="span10">
         <input
           name="course_ids"
-          class="recipients span10"
+          class="contextSearch span10"
           type="text"
           data-finder_url="/conversations/find_recipients">
       </div>
