--- a/app/views/jst/quickStartBar/message.handlebars
+++ b/app/views/jst/quickStartBar/message.handlebars
@@ -9,7 +9,7 @@
       <div class="span10">
         <input
           name="recipients"
-          class="recipients span10"
+          class="contextSearch span10"
           type="text"
           data-finder_url="http://localhost:3000/conversations/find_recipients">
       </div>
