--- a/app/views/jst/quickStartBar/assignment.handlebars
+++ b/app/views/jst/quickStartBar/assignment.handlebars
@@ -24,9 +24,10 @@
       <div class="span10">
         <input
           name="course_ids"
-          class="recipients span10"
+          class="contextSearch span10"
           type="text"
-          data-finder_url="http://localhost:3000/conversations/find_recipients">
+          data-finder_url="http://localhost:3000/conversations/find_recipients"
+        >
       </div>
       <div class="span2">
         <button type="submit" class="button small-button button-wide" data-text-while-loading="{{#t "assigning"}}Saving...{{/t}}">Assign</button>
