remove left margin on sidebar-less container
Change-Id: I34083748726ce2ef7475c50faec04d89e325ba44

--- a/app/views/layouts/new_application.html.erb
+++ b/app/views/layouts/new_application.html.erb
@@ -159,7 +159,7 @@
 
 <div id="wrapper-container">
   <div id="wrapper">
-    <div class="container" style="margin-left:0;">
+    <div class="container">
       <% if @show_left_side %>
         <div class="row">
           <div class="span2" id="left-side">
