--- a/app/views/jst/KollectionItems/KollectionItemSaveView.handlebars
+++ b/app/views/jst/KollectionItems/KollectionItemSaveView.handlebars
@@ -1,7 +1,7 @@
 <form class="triangle-box-with-header kollectionItemSaveView">
   <header class="triangle-box-header">
     <div class="row-fluid">
-      <input autofocus placeholder="{{#t "say_something_about_this..."}}Say something about this...{{/t}}" class="span12" name="user_comment" value="{{user_comment}}">
+      <input type="text" autofocus placeholder="{{#t "say_something_about_this..."}}Say something about this...{{/t}}" class="span12" name="user_comment" value="{{user_comment}}">
     </div>
   </header>
   <div class="triangle-box-content">
