--- a/app/views/jst/quickStartBar/pin.handlebars
+++ b/app/views/jst/quickStartBar/pin.handlebars
@@ -5,12 +5,7 @@
       <input placeholder="http://" class="span12 expander" name="title" type="text">
     </div>
 
-    <div class="row-fluid expandee">
-      <input placeholder="Type the name of the collection to add this to..." class="span10" type="text">
-      <div class="span2">
-        <button type="submit" class="button small-button button-wide">Add</button>
-      </div>
-    </div>
+    <div class="row-fluid expandee kollectionItemSaveView"></div>
   </div>
 </form>
 
