input[name=title] -> input[name=url]
Change-Id: I32b8ef4d521bff9dbf53aae20679f5b4d6587c76

--- a/app/views/jst/quickStartBar/pin.handlebars
+++ b/app/views/jst/quickStartBar/pin.handlebars
@@ -2,7 +2,7 @@
   <div class="triangle-box-content controls">
 
     <div class="row-fluid" >
-      <input placeholder="http://" class="span12 expander" name="title" type="text">
+      <input placeholder="http://" class="span12 expander" name="url" type="text">
     </div>
 
     <div class="row-fluid expandee kollectionItemSaveView"></div>
