--- a/app/views/jst/KollectionItems/KollectionItemSaveView.handlebars
+++ b/app/views/jst/KollectionItems/KollectionItemSaveView.handlebars
@@ -1,4 +1,4 @@
-<form class="triangle-box-with-header kollectionItemSaveView">
+<form class="triangle-box-with-header kollectionItemSaveView collection-item">
   <header class="box-header">
     <div class="row-fluid">
       <input type="text" autofocus placeholder="{{#t "say_something_about_this..."}}Say something about this...{{/t}}" class="span12" name="user_comment" value="{{user_comment}}">
