--- a/app/views/info/styleguide.html.erb
+++ b/app/views/info/styleguide.html.erb
@@ -156,14 +156,22 @@
   <h2>.box-with-header</h2>
   <div class="box-with-header">
     <header class="box-header">
-      <ul class="box-actions">
-        <li><a href="#"><i class="icon-like"></i>167</a></li>
-        <li><a href="#"><i class="icon-pin"></i>167</a></li>
-        <li><a href="#"><i class="icon-discussion"></i>167</a></li>
-      </ul>
-
-      put the title here
-      <div class="box-subheader">put the subheader here</div>
+      <div class="box-header-column">
+        put the title here
+        <div class="box-subheader">put the subheader here</div>
+      </div>
+      <a class="box-header-column" href="#">
+        <i class="icon-like"></i>
+        <div>167</div>
+      </a>
+      <a class="box-header-column" href="#">
+        <i class="icon-pin"></i>
+        <div>167</div>
+      </a>
+      <a class="box-header-column" href="#">
+        <i class="icon-discussion"></i>
+        <div>167</div>
+      </a>
     </header>
     <div class="box-content">
       this is where all the content would go
