--- a/app/stylesheets/blue/_icons.scss
+++ b/app/stylesheets/blue/_icons.scss
@@ -343,5 +343,8 @@ i[class*=icon-large-], i[class^=icon-large-] {
   .icon-pin {
     background-position: -102px -10px;
   }
+  .icon-calendar-day {
+    background-position: -132px -10px;
+  }
 }
 
