registration page and signup flows, closes #8676, #8806
test plan:
1. sign up as a teacher
2. sign up as a student with a course code
   1. confirm that you are auto-logged in as soon as you submit valid info
      in the form
3. sign up as a student without a course code
4. sign up as an observer
   1. confirm that you are auto-enrolled in the child's courses
5. test the log in form

Change-Id: I581de48095e85ca869b9ded101fe143ffadb9c9a
Reviewed-on: https://gerrit.instructure.com/11111
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/stylesheets/blue/_base.scss
+++ b/app/stylesheets/blue/_base.scss
@@ -76,3 +76,25 @@ h1 {
   display: none;
 }
 
+.error_box {
+  position: absolute;
+  top: -1000px;
+  left: -100px;
+  z-index: 11;
+  max-width: 200px;
+  min-width: 100px;
+  .error_text {
+    max-height: 100px;
+    overflow: auto;
+    margin-bottom: 10px;
+    background-color: #edd;
+    border: 2px solid #a44;
+    border-radius: 5px;
+    padding: 5px;
+  }
+  .error_bottom {
+    position: absolute;
+    bottom: 0;
+    left: 4px;
+  }
+}
