fix regressions and broken specs
Change-Id: I75c2c286eeb0800619e7c43d6d902558655bd6fa

--- a/app/stylesheets/blue/_mixins.scss
+++ b/app/stylesheets/blue/_mixins.scss
@@ -1,6 +1,7 @@
 @import '../bootstrap/bootstrap/variables';
 @import '../bootstrap/bootstrap/mixins';
 @import 'environment';
+@import 'variables';
 
 @mixin bevelText {
   text-shadow: 0 1px 1px rgba(255,255,255,.75);
