--- a/app/views/info/styleguide.html.erb
+++ b/app/views/info/styleguide.html.erb
@@ -135,6 +135,41 @@
     </div>
   </div>
 
+
+  <h2>.triangle-box</h2>
+  <section class="image-block">
+    <div class="image-block-image">
+      <img src="http://placekitten.com/42/42/">
+    </div>
+    <div class="image-block-content triangle-box-with-header">
+      <header class="box-header">
+        put the title here
+        <div class="box-subheader">put the subheader here</div>
+      </header>
+      <div class="box-content">
+        this is where all the content would go
+      </div>
+    </div>
+  </section>
+
+
+  <h2>.box-with-header</h2>
+  <div class="box-with-header">
+    <header class="box-header">
+      <ul class="box-actions">
+        <li><a href="#"><i class="icon-like"></i>167</a></li>
+        <li><a href="#"><i class="icon-pin"></i>167</a></li>
+        <li><a href="#"><i class="icon-discussion"></i>167</a></li>
+      </ul>
+
+      put the title here
+      <div class="box-subheader">put the subheader here</div>
+    </header>
+    <div class="box-content">
+      this is where all the content would go
+    </div>
+  </div>
+
   <h2 class="v-gutter">Stacked Tabs</h2>
   <div class="row">
     <div class="span4">
