--- a/app/views/jst/KollectionItems/KollectionItemSaveView.handlebars
+++ b/app/views/jst/KollectionItems/KollectionItemSaveView.handlebars
@@ -1,10 +1,10 @@
 <form class="triangle-box-with-header kollectionItemSaveView">
-  <header class="triangle-box-header">
+  <header class="box-header">
     <div class="row-fluid">
       <input type="text" autofocus placeholder="{{#t "say_something_about_this..."}}Say something about this...{{/t}}" class="span12" name="user_comment" value="{{user_comment}}">
     </div>
   </header>
-  <div class="triangle-box-content">
+  <div class="box-content">
     <div class="linkDataView"></div>
   </div>
   <div class="button-container border border-t toolbar">
