--- a/app/views/jst/quickStartBar/pin.handlebars
+++ b/app/views/jst/quickStartBar/pin.handlebars
@@ -1,5 +1,5 @@
 <form class="newItemForm">
-  <div class="triangle-box-content controls">
+  <div class="box-content controls">
 
     <div class="row-fluid" >
       <input placeholder="http://" class="span12 expander" name="url" type="text">
