--- a/app/stylesheets/blue/_mixins.scss
+++ b/app/stylesheets/blue/_mixins.scss
@@ -1,6 +1,6 @@
 @import '../bootstrap/bootstrap/variables';
 @import '../bootstrap/bootstrap/mixins';
-@import 'variables';
+@import 'environment';
 
 @mixin bevelText {
   text-shadow: 0 1px 1px rgba(255,255,255,.75);
@@ -11,4 +11,62 @@
   color: $blueDark;
 }
 
+@mixin box-with-header {
+  border: solid 1px $borderColor;
+  border-radius: 3px;
+  @include box-shadow(0 1px 1px 0px lighten($borderColor, 20%));
+  @include gradient-vertical($white, $lightBackground);
 
+  .box-header {
+    padding: 8px 20px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    @include content-callout();
+    border-bottom: solid 1px $listBorderColor;
+    color: $blueDark;
+
+    .box-subheader {
+      color: $grayDark;
+      font-size: 11px;
+    }
+  }
+
+  .box-content {
+    padding: 10px 20px;
+  }
+  .box-actions {
+    float: right;
+    list-style: none;
+    margin: 0;
+    margin-top: -8px; //undo the padding of .box-header
+    margin-right: -20px; //undo the padding of .box-header
+    li {
+      float: left;
+      &:last-child a {
+        border-right-width: 0;
+      }
+    }
+    a {
+      display: block;
+      padding: 10px 10px;
+      height: 32px;
+      color: #9babb6;
+      text-shadow: 0 1px 0 rgba(255,255,255,.5);
+      border: 1px solid #c3ccd5;
+      border-width: 0 1px;
+      margin-left: -1px;
+      position: relative;
+      text-align: center;
+      &:hover{
+        @include gradient-vertical(#dae8f5, #b5d1eb);
+        text-decoration: none;
+        border-color: $borderColor;
+        z-index: 1;
+      }
+    }
+    i[class*="icon-"], i[class^="icon-"] {
+      display: block;
+      margin: 0 auto;
+    }
+  }
+}
