--- a/app/views/jst/quickStartBar/discussion.handlebars
+++ b/app/views/jst/quickStartBar/discussion.handlebars
@@ -1,5 +1,5 @@
 <form class="newItemForm">
-  <div class="triangle-box-content controls">
+  <div class="box-content controls">
 
     <div class="row-fluid">
       <input placeholder="Discussion topic" class="span12 expander" name="title" type="text">
