--- a/app/views/jst/quickStartBar/message.handlebars
+++ b/app/views/jst/quickStartBar/message.handlebars
@@ -1,5 +1,5 @@
 <form class="newItemForm message">
-  <div class="triangle-box-content controls">
+  <div class="box-content controls">
 
     <div class="row-fluid expander">
       <textarea placeholder="Message" class="span12" rows="5" name="body"></textarea>
