--- a/app/views/jst/quickStartBar/QuickStartBarView.handlebars
+++ b/app/views/jst/quickStartBar/QuickStartBarView.handlebars
@@ -4,12 +4,9 @@
   </div>
   <div class=span11>
     <ul class="nav nav-tabs">
-      <li><a data-type="assignment" href="#"><i class="icon-assignment"></i>{{#t "assignment"}}Assignment{{/t}}</a></li>
-      <li><a data-type="discussion" href="#"><i class="icon-discussion"></i>{{#t "discussion"}}Discussion{{/t}}</a></li>
-      <li><a data-type="announcement" href="#"><i class="icon-announcement"></i>{{#t "announcement"}}Announcement{{/t}}</a></li>
-      <li><a data-type="message" href="#"><i class="icon-message"></i>{{#t "message"}}Message{{/t}}</a></li>
-      <li><a data-type="pin" href="#"><i class="icon-pin"></i>{{#t "pin"}}Pin{{/t}}</a></li>
-      <li><a data-type="event" href="#"><i class="icon-calendar-day"></i>{{#t "Event"}}Event{{/t}}</a></li>
+      {{#each quickStartItems}}
+        <li><a data-type="{{type}}" href="#"><i class="icon-{{icon}}"></i>{{#t "{{type}}"}}{{title}}{{/t}}</a></li>
+      {{/each}}
     </ul>
   </div>
 </div>
