add a little inner shadow
Change-Id: Iac32d745f2c525e57187a883ee2d3c4b5db560dc

--- a/app/stylesheets/blue/_mixins.scss
+++ b/app/stylesheets/blue/_mixins.scss
@@ -58,7 +58,8 @@
       position: relative;
       text-align: center;
       &:hover{
-        @include gradient-vertical(#dae8f5, #b5d1eb);
+        @include box-shadow(inset 0 1px 1px white);
+        @include gradient-vertical($contentCalloutColor, darken($contentCalloutColor, 8%));
         text-decoration: none;
         border-color: $borderColor;
         z-index: 1;
