--- a/app/views/jst/Kollections/SelectKollectionView.handlebars
+++ b/app/views/jst/Kollections/SelectKollectionView.handlebars
@@ -1,7 +1,7 @@
 <select name="collection_id">
-  <option value="">{{#t "--_choose_a_collection_--"}}-- Choose A Collection --{{/t}}</option>
+  <option value="">{{#t "choose_a_collection"}}-- Choose A Collection --{{/t}}</option>
   {{#each this}}
     <option value="{{cid}}" {{#if selected}}selected{{/if}}>{{name}}</option>
   {{/each}}
-  <option value="new">{{#t "+_add_new_collection"}}+ Add New Collection{{/t}}</option>
+  <option value="new">{{#t "add_new_collection"}}+ Add New Collection{{/t}}</option>
 </select>
