TokenInput teardown, fixed some styles
Change-Id: Ic14af38488beddaa418df878c2fdf78779283c5d

--- a/app/views/jst/quickStartBar/event.handlebars
+++ b/app/views/jst/quickStartBar/event.handlebars
@@ -1,5 +1,5 @@
 <form class="newItemForm">
-  <div class="triangle-box-content controls">
+  <div class="box-content controls">
 
     <div class="row-fluid expander">
       <input type="text" placeholder="Event Title" class="span12" name="title"></textarea>
@@ -21,7 +21,7 @@
           data-finder_url="/conversations/find_recipients">
       </div>
       <div class="span2">
-        <button type="submit" class="button small-button button-wide" data-text-while-loading="{{#t "Sending"}}Sending...{{/t}}">Send</button>
+        <button type="submit" class="button small-button button-wide" data-text-while-loading="{{#t "saving"}}Saving...{{/t}}">{{#t "save"}}Save{{/t}}</button>
       </div>
     </div>
   </div>
