--- a/app/views/jst/activityFeed/ActivityFeedFilterView.handlebars
+++ b/app/views/jst/activityFeed/ActivityFeedFilterView.handlebars
@@ -6,16 +6,23 @@
 
   <header>Courses</header>
   <ul class="courseList">
-    <li><a>Loading...</a></li>
+    {{#each courses}}
+      <li><a href="#" data-value="course:{{id}}">{{name}}</a></li>
+    {{/each}}
   </ul>
 
   <header>Canvas Network</header>
+  <!--
   <ul class="community">
     <li><a href="#" data-value="peopleIFollow">People I Follow</a>
     <li><a href="#" data-value="popular">Popular</a>
     <li><a href="#" data-value="questions">Questions</a>
   </ul>
+  -->
   <ul class="communityUserCommunities filterList">
-    <li><a href="#">TODO: fake data</a>
+    {{#each communities}}
+      <li><a href="#" data-value="community:{{id}}">{{name}}</a></li>
+    {{/each}}
   </ul>
 </div>
+
