profile: use text helper for better bio formatting
Change-Id: Ifa9a8983e0089a434d5d3c995dbe65372eaa373d

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -46,7 +46,7 @@
   <tr>
     <td><%= f.blabel :bio, :en => "Bio" %></td>
     <td>
-      <span class="display_data"><%= @user.bio %></span>
+      <span class="display_data"><%= format_message(@user.bio).first.html_safe %></span>
       <%= f.text_area :bio, :class => :edit_data, :id => 'user_bio' %>
     </td>
   </tr>
