--- a/app/views/jst/quickStartBar/QuickStartBarView.handlebars
+++ b/app/views/jst/quickStartBar/QuickStartBarView.handlebars
@@ -5,7 +5,7 @@
   <div class=span11>
     <ul class="nav nav-tabs">
       {{#each quickStartItems}}
-        <li><a data-type="{{type}}" href="#"><i class="icon-{{icon}}"></i>{{#t "{{type}}"}}{{title}}{{/t}}</a></li>
+        <li><a data-type="{{type}}" href="#"><i class="icon-{{icon}}"></i>{{title}}</a></li>
       {{/each}}
     </ul>
   </div>
