user profile tweaks
- fix active tab issue in sidebar on group settings page
- stats table is now composed of followers, collections, collection
  items

Change-Id: I88df0001b1cdffcb7f92e7b365b3ae00880f72e8

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -24,14 +24,10 @@
           <td>103</td>
         </tr><tr>
           <th>Collections</th>
-          <td>5</td>
+          <td><%= @user.collections.public.count %></td>
         </tr><tr>
-          <th>Comments</th>
-          <td>223</td>
-        </tr> <tr>
-          <th>Posts</th>
-          <td>37</td>
-        </tr>
+          <th>Items</th>
+          <td><%= @items_count %></td>
       </table>
 
       <% if @user.show_user_services? %>
