--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-  <%= join_title t(:page_title, "Profile"), @user.name %>
+  <%= join_title t(:page_title, "Profile Settings"), @user.name %>
 <% end %>
 
 <% content_for :right_side do %>
