filter by group
Change-Id: I8647550d5b0595e55531872d3676d63fa2428d2f

--- a/app/views/jst/activityFeed/ActivityFeedItemsView.handlebars
+++ b/app/views/jst/activityFeed/ActivityFeedItemsView.handlebars
@@ -5,10 +5,10 @@
     </div>
     <div class="span7">
       <ul class="activityFeedItemsFilter nav nav-links">
-        <li><a href="#" class="active">All</a>
-        <li><a href="#">Announcements</a>
-        <li><a href="#">Discussions</a>
-        <li><a href="#">Messages</a>
+        <li><a href="#" data-value="all" class="active">All</a>
+        <li><a href="#" data-value="announcements">Announcements</a>
+        <li><a href="#" data-value="discussions">Discussions</a>
+        <li><a href="#" data-value="messages">Messages</a>
       </ul>
     </div>
   </div>
