removed bootstrap-responsive
Change-Id: I03e47a9e54f632ca696f1970c8e2a3313b65b022

--- a/app/stylesheets/blue/application.scss
+++ b/app/stylesheets/blue/application.scss
@@ -2,7 +2,7 @@
 @import "mixins";
 
 @import "bootstrap/bootstrap";
-@import "bootstrap/bootstrap-responsive";
+//@import "bootstrap/bootstrap-responsive";
 @import "bootstrap_overrides";
 
 @import "icons";
