social links on profile page
Change-Id: I4eb5a817394dd4a7a0aee1d7663c6cead8309aea

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -31,8 +31,11 @@
       </table>
 
       <% if @user.show_user_services? %>
-        Find Me On
+        <div class="social-header border border-b">Find Me On</div>
         <ul class="social-links">
+          <% @services.each do |s| %>
+            <li><a href="<%= s.service_user_link %>" class="social <%= s.service %>"><%= s.service_name %></a></li>
+            <% end %>
         </ul>
       <% end %>
     </div>
