--- a/app/stylesheets/profile/show.sass
+++ b/app/stylesheets/profile/show.sass
@@ -33,3 +33,50 @@ $profilePicWidth: $gridColumnWidth * 2 + $gridGutterWidth
     text-align: right
     color: $linkColor
     font-weight: bold
+
+.social-header
+  font-weight: bold
+  margin: $gridGutterWidth 0 5px
+
+.social-links
+  list-style-type: none
+  margin: 0
+  padding: 0
+
+.social
+  display: inline-block
+  width: 30px
+  height: 30px
+  margin-right: 20px
+  background-image: url(/images/social-icons.png)
+  +accessible_text_replacement
+
+.facebook
+  background-position: 0 0
+  &:hover
+    background-position: 0 -32px
+
+.twitter
+  background-position: -34px 0
+  &:hover
+    background-position: -34px -32px
+
+.linked_in
+  background-position: -97px 0
+  &:hover
+    background-position: -97px -32px
+
+.delicious
+  background-position: -129px 0
+  &:hover
+    background-position: -129px -32px
+
+.diigo
+  background-position: -160px 0
+  &:hover
+    background-position: -160px -32px
+
+.skype
+  background-position: -193px 0
+  &:hover
+    background-position: -193px -32px
