profile page: don't break if bio is nil
Change-Id: Ib5330e9744e1f7107f522cfe328ddb91686b52a2

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="span5">
       <h1><%= @user.short_name %></h1>
-      <p><%= format_message(@user.bio).first.html_safe %></p>
+      <p><%= format_message(@user.bio || "").first.html_safe %></p>
       <% if @user != @current_user %>
         <p><button id="follow-user">Follow</button></p>
       <% end %>
