profile page: only show social section when there are links to show
Change-Id: Ife724bff5ac5fb39d27a338a087e4f441a33004a

--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -30,7 +30,7 @@
           <td><%= @items_count %></td>
       </table>
 
-      <% if @user.show_user_services? %>
+      <% if @user.show_user_services? && @services.present? %>
         <div class="social-header border border-b">Find Me On</div>
         <ul class="social-links">
           <% @services.each do |s| %>
