fixed content-callout on a content-box
Change-Id: Id81290191eff2449167cab8d97afc1664a9c3355

--- a/app/stylesheets/blue/_components.scss
+++ b/app/stylesheets/blue/_components.scss
@@ -19,7 +19,7 @@
 }
 
 .content-box {
-  background: $lightBackground;
+  background-color: $lightBackground;
 
   & > * {
     padding-left: $contentBoxPadding;
